--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,5 @@
 name: Build Extension
 
-
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
@@ -9,7 +8,6 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
@@ -17,7 +15,7 @@ jobs:
 
     steps:
     - name: Install Build Dependencies
-      run: npm install web-ext
+      run: npm install -g web-ext
     
     - name: Build Extension
       run: web-ext build
